# mat

./: Cargo.toml  PLAN.md  README.md  TASKS.md  TODO.md  build.rs
src/: cli.rs  error.rs  main.rs
src/display/: line.rs  mod.rs
src/filter/: grep.rs  mod.rs
src/highlight/: mod.rs  search.rs  syntax.rs
src/input/: binary.rs  encoding.rs  file.rs  follow.rs  large.rs  mod.rs  stdin.rs
src/markdown/: mod.rs  render.rs
src/pager/: app.rs  input.rs  mod.rs  search.rs  ui.rs
src/theme/: detect.rs  mod.rs
tests/: integration_tests.rs
