[package]
name = "mat-o-viewer"
version = "0.1.0"
edition = "2021"
description = "A modern terminal file viewer combining cat, less, and grep with syntax highlighting and markdown rendering"
license = "MIT"
authors = ["lelloman"]
repository = "https://github.com/lelloman/mat"
homepage = "https://github.com/lelloman/mat"
keywords = ["cli", "terminal", "cat", "less", "pager"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
rust-version = "1.70"

[[bin]]
name = "mat"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
syntect = "5"
pulldown-cmark = "0.12"
terminal-light = "1"
regex = "1"
anyhow = "1"
thiserror = "1"
once_cell = "1"
memmap2 = "0.9"
unicode-width = "0.2"
lru = "0.12"
encoding_rs = "0.8"

[build-dependencies]
syntect = "5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
proptest = "1"
